--- a/OSXApplication/miclightmeter/miclightmeter/Base.lproj/MainMenu.xib
+++ b/OSXApplication/miclightmeter/miclightmeter/Base.lproj/MainMenu.xib
@@ -687,16 +687,6 @@
                 <rect key="frame" x="0.0" y="0.0" width="609" height="283"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <levelIndicator verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wdg-4e-3Ih">
-                        <rect key="frame" x="153" y="219" width="316" height="18"/>
-                        <animations/>
-                        <levelIndicatorCell key="cell" alignment="left" doubleValue="2" maxValue="2" warningValue="2" criticalValue="2" id="4Nl-82-tqj"/>
-                        <connections>
-                            <binding destination="m76-w1-MMv" name="value" keyPath="audioLevel.curValue" previousBinding="jbR-pm-1gn" id="Pbw-l1-gXU"/>
-                            <binding destination="m76-w1-MMv" name="maxValue" keyPath="audioLevel.maxValue" id="bqG-hZ-fl0"/>
-                            <binding destination="m76-w1-MMv" name="minValue" keyPath="audioLevel.minValue" previousBinding="bqG-hZ-fl0" id="jbR-pm-1gn"/>
-                        </connections>
-                    </levelIndicator>
                     <levelIndicator verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uYb-ZU-GwV">
                         <rect key="frame" x="153" y="165" width="316" height="18"/>
                         <animations/>
@@ -724,6 +714,18 @@
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
+                    </textField>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y21-HJ-lK5">
+                        <rect key="frame" x="151" y="246" width="320" height="17"/>
+                        <animations/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Unknown" id="hGm-ae-mEV">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                        <connections>
+                            <binding destination="dKA-ev-LYE" name="value" keyPath="deviceName" id="0ON-62-gCK"/>
+                        </connections>
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KgF-Y7-JZ4">
                         <rect key="frame" x="18" y="167" width="74" height="17"/>
@@ -814,6 +816,9 @@
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
+                        <connections>
+                            <binding destination="m76-w1-MMv" name="value" keyPath="audioLevel.absMinValue" id="Feb-pe-J2i"/>
+                        </connections>
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BxT-vd-cZD">
                         <rect key="frame" x="434" y="193" width="37" height="17"/>
@@ -823,6 +828,9 @@
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
+                        <connections>
+                            <binding destination="m76-w1-MMv" name="value" keyPath="audioLevel.absMaxValue" id="bfb-Rf-l46"/>
+                        </connections>
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aa6-R1-UaH">
                         <rect key="frame" x="151" y="142" width="46" height="17"/>
@@ -878,18 +886,18 @@
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y21-HJ-lK5">
-                        <rect key="frame" x="151" y="246" width="320" height="17"/>
+                    <levelIndicator verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wdg-4e-3Ih">
+                        <rect key="frame" x="153" y="219" width="316" height="18"/>
                         <animations/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Unknown" id="hGm-ae-mEV">
-                            <font key="font" metaFont="system"/>
-                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
+                        <levelIndicatorCell key="cell" alignment="left" doubleValue="50" maxValue="100" criticalValue="100" numberOfMajorTickMarks="10" id="4Nl-82-tqj"/>
                         <connections>
-                            <binding destination="dKA-ev-LYE" name="value" keyPath="deviceName" id="0ON-62-gCK"/>
+                            <binding destination="m76-w1-MMv" name="criticalValue" keyPath="audioLevel.maxValue" id="So3-a0-y2Q"/>
+                            <binding destination="m76-w1-MMv" name="maxValue" keyPath="audioLevel.absMaxValue" id="8Fc-QN-G0z"/>
+                            <binding destination="m76-w1-MMv" name="minValue" keyPath="audioLevel.absMinValue" previousBinding="8Fc-QN-G0z" id="JK7-d6-FMo"/>
+                            <binding destination="m76-w1-MMv" name="value" keyPath="audioLevel.curValue" previousBinding="JK7-d6-FMo" id="g2h-tC-CLQ"/>
+                            <binding destination="m76-w1-MMv" name="warningValue" keyPath="audioLevel.minValue" previousBinding="So3-a0-y2Q" id="0lD-2I-R5S"/>
                         </connections>
-                    </textField>
+                    </levelIndicator>
                 </subviews>
                 <animations/>
             </view>
